<resources>
    <string name="app_name">Team Management System</string>
    <string name="create_project_submit">Submit</string>
    <string name="create_project_max_teams">Max Teams</string>
    <string name="create_project_max_members">Max Team Members</string>
    <string name="create_project_min_feedback">Min Weekly Feedback</string>
    <string name="create_project_title">Create Project Form</string>
    <string name="title_activity_login_form">LoginForm</string>
    <string name="login_title">Login Form</string>
    <string name="login_button">LOGIN</string>
    <string name="login_label">Email:</string>
    <string name="create_profile_title">Create Profile Form</string>
    <string name="create_profile_name">Name:</string>
    <string name="create_profile_edu">Education:</string>
    <string name="create_profile_exp">Experience:</string>
    <string name="user_menu_title">User Menu</string>
    <string name="user_menu_join">Join Team</string>
    <string name="user_menu_logout">Logout</string>
    <string name="user_menu_create">Create Team</string>
    <string name="create_team_title">Create Team Form</string>
    <string name="create_team_name">Team Name:</string>
    <string name="create_team_submit">Submit</string>
    <string name="open_teams_displayer_title">Open Teams</string>
    <string name="team_members_displayer_title">Team\'s Members</string>
    <string name="profile_displayer_title">Member\'s Profile</string>
    <string name="manager_menu_assign_team_task">Assign Team Task</string>
    <string name="manager_menu_assign_team_lead">Assign Team Lead</string>
    <string name="manager_menu_view_team_feedback">View Team Feedback</string>
    <string name="manager_menu_title">Manager Menu</string>
    <string name="assign_team_task_gui_title">Teams With Leads</string>
    <string name="assign_team_task_form_title">Assign Team Task</string>
    <string name="assign_team_task_description_label">Description</string>
    <string name="assign_team_task_form_duration_label">Duration (days)</string>
    <string name="lead_menu_title">Lead Menu</string>
    <string name="lead_menu_view_team_task">View Team Task</string>
    <string name="lead_menu_create_team_feedback">Create Team Feedback</string>
    <string name="lead_menu_assign_member_task">Assign Member Task</string>
    <string name="lead_menu_view_member_feedback">View Member Feedback</string>
    <string name="view_team_task_gui_title">View Team Task</string>
    <string name="lead_menu_logout">Logout</string>
    <string name="manager_menu_logout">Logout</string>
    <string name="member_menu_title">Member Menu</string>
    <string name="member_menu_view_profile">View Profile</string>
    <string name="member_menu_nominate_team_lead">Nominate Team Lead</string>
    <string name="member_menu_view_member_task">View Member Task</string>
    <string name="member_menu_create_member_feedback">Create Member Feedback</string>
    <string name="member_menu_logout">Logout</string>
    <string name="nominate_team_lead_gui_title">Nominate Team Lead</string>
    <string name="nominate_team_lead_candidate_gui_title">Candidate Profile</string>
    <string name="assign_team_lead_gui_title">Teams With Nominations</string>
    <string name="assign_team_lead_profiles_gui_title">Team Nominees</string>
    <string name="assign_team_lead_profile_gui_title">Nominee Profile</string>
    <string name="create_team_feedback_gui_title">Team Feedback Form</string>
    <string name="create_team_feedback_gui_label">Team Feedback</string>
    <string name="view_team_feedback_gui_title">Teams With Feedback</string>
    <string name="view_team_feedback_gui_feedback_title">Team Feedback</string>
    <string name="view_profile_gui_title">Profile</string>
    <string name="assign_member_task_gui_title">Members</string>
    <string name="assign_member_task_form_title">Assign Task Form</string>
    <string name="assign_member_task_description_label">Description</string>
    <string name="assign_member_task_form_duration_label">Duration (days)</string>
    <string name="view_member_task_gui_title">Member Task</string>
    <string name="create_team_feedback_gui_feedback_label">Feedback</string>
    <string name="create_member_feedback_gui_title">Member Feedback Form</string>
    <string name="create_member_feedback_gui_feedback_label">Feedback</string>
    <string name="view_member_feedback_gui_title">Members</string>
    <string name="view_member_feedback_gui_feedback_title">Member Feedback</string>
</resources>
